[package]
name = "opentimelineio"
version = "0.1.0"
authors = ["Scott Wilson <scott@propersquid.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Rust bindings for OpenTimelineIO (placeholder)"
keywords = ["vfx", "animation", "cg", "opentimelineio", "otio"]
categories = ["api-bindings"]
homepage = "https://www.github.com/scott-wilson/OpenTimelineIO-rs"
documentation = "https://docs.rs/OpenTimelineIO"
repository = "https://www.github.com/scott-wilson/OpenTimelineIO-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
